# meta-search

./: README.md  pyproject.toml
metasearch/engine/: middleware.py  models.py  resp.py  search.py  urls.py  views.py
metasearch/engine/migrations/: 0001_initial.py  0002_auto_20200919_0648.py
metasearch/metasearch/: asgi.py  settings.py  urls.py  wsgi.py
