[tool.poetry]
name = "meta-search"
version = "0.1.0"
description = ""
authors = ["RainrainWu <s0958334772@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.1.1"
requests = "2.24.0"
selenium = "3.141.0"
webdriver-manager = "^3.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
